# yew-store-reproduce

./: .gitignore  Cargo.toml  README.md  webpack.config.js
src/: app.rs  lib.rs  text_input.rs
static/: index.html
