[package]
name = "sketchy-art-ui"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
strum = "0.20"
strum_macros = "0.20.1"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-bindgen-futures = "0.4.19"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
yew-router = "0.14.0"
lipsum = "0.7"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.7", features = ["small_rng"] }
yewtil = "0.3.2"


[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
